2011-03-19 Rolf Seuster <seuster AT cern.ch>
	* "--drop-and-reload" now default, if no other option to "--athenaopts" specified
	* tagging PATJobTransforms-00-03-23

2011-03-18 Maarten Boonekamp
	* cf previous entry : now added 
	outputNTUP_SMWENUFile,outputNTUP_SMZEEFile,outputNTUP_SMDYEEFile,outputNTUP_SMBKGEFile,
	outputNTUP_SMWMUNUFile,outputNTUP_SMZMUMUFile,outputNTUP_SMDYMUMUFile,outputNTUP_SMBKGMUFile,
	outputNTUP_SMDILEPFile 
	to ListOfDefaultPositionalKeys.
	* Tagging as PATJobTransforms-00-03-22

2011-03-18 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Exchanged outputNTUP_WZFile with outputNTUP_SMWZFile in
	  Reco_trf. This is the new name of the Standard Model
	  inclusive D3PD. The special configuration for
	  outputNTUP_WZFile should be removed later on, but for
	  now it's not a major concern. (Will have to ask the
	  main developers about that...)
	* Tagging as PATJobTransforms-00-03-21

2011-03-15 Jamie Boyd <Jamie.Boyd@cern.ch>
        * add in Reco_trf option outputNTUP_BKGDFile
	* tagging PATJobTransforms-00-03-20

2011-03-14 Maaike Limper <maaike.limper@cern.ch>
	* use CERN replica in case of problems connecting to ami.in2p3.fr
	* tagging PATJobTransforms-00-03-19

2011-03-10  David Cote  <david.cote@cern.ch>
	* Changed rec.AutoConfiguration default to 'everything' in CommonSkeletonJobOptions.py
	* Moved doESD.lock() below preExec in skeleton.MergePool.py
 	* tagging  PATJobTransforms-00-03-18

2011-03-08 Andrea Di Simone <andrea.di.simone@cern.ch>
	* scripts/Reco_trf.py (ListOfDefaultPositionalKeys): adding outputNTUP_HSG2File outputNTUP_2LHSG2File outputDAOD_HSG2File
	* Added NTUP_HSG2 NTUP_2LHSG2 DAOD_HSG2 in Configuration.py
	* Added  NTUP_HSG2 NTUP_2LHSG2 DAOD_HSG2 in share/skeleton.AODtoDPD_trf.py
 	* tagging  PATJobTransforms-00-03-17

2011-03-03  David Cote  <david.cote@cern.ch>
	* Added NTUP_PHOTON to ProdSys ListOfDefaultPositionalKeys in Reco_trf
	* tagging PATJobTransforms-00-03-16
